--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/gradle,intellij
+.idea/compiler.xml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules/program_main.iml
+.idea/modules/program_test.iml
+.idea/vcs.xml
