Added elasticsearh, lombok; created entety User and service, repository classes for it

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.boot:spring-boot-starter-data-elasticsearch")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+
+    compileOnly("org.projectlombok:lombok")
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.springframework.security:spring-security-test")
     testCompile("junit:junit")
