--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-data-elasticsearch")
+    compile("org.reflections:reflections:0.9.11")
 
     compileOnly("org.projectlombok:lombok")
 
