--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 elasticsearch.cluster = elasticsearch
 elasticsearch.host = localhost
 elasticsearch.port = 9300
+
+security.oauth2.resource.id=oauth2_id
+security.oauth2.resource.filter-order=3
+security.oauth2.client.access-token-validity-seconds=10000
+security.oauth2.client.refresh-token-validity-seconds=30000
