--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-elasticsearch")
     compile("org.springframework.security.oauth:spring-security-oauth2")
     compile("org.springframework.security:spring-security-jwt")
+    compile("org.mapstruct:mapstruct-processor:1.2.0.Final")
+    compile("org.mapstruct:mapstruct-jdk8:1.2.0.Final")
 
     compile("org.webjars:jquery:3.2.1")
     compile("org.webjars:bootstrap:4.0.0-beta.2")
