--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ security.oauth2.resource.id=oauth2_id
 security.oauth2.resource.filter-order=3
 security.oauth2.client.access-token-validity-seconds=10000
 security.oauth2.client.refresh-token-validity-seconds=30000
+
+server.port=8090
