--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-elasticsearch")
+    compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.security.oauth:spring-security-oauth2")
     compile("org.springframework.security:spring-security-jwt")
     compile("org.mapstruct:mapstruct-processor:1.2.0.Final")
